--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>this is an example project</h1>
+<header>
+    <section>
+       <ul>
+        <li><a href="#">WEBSTUDIO</a></li>
+        <nav>
+        <li><a href="#">Studio</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contacts</a></li>
+        </nav>
+    </ul>
+    <address>
+        <Ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+        </Ul>
+    </address>
+    </section>
+    <section>
+        <h1>Effective Solutions<br> for Your Business</h1>
+        <button type="button">Order Service</button>
+    </section>
+</header>
+<main>
+    <section>
+        <ul>
+        <li>
+            <h2>Strategy</h2>
+            <p>Our goal is to identify the business
+            problem to walk away with the perfect and creative solution. </p>
+        </li>
+        <li>
+            <h2>Punctuality</h2>
+            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+        </li>
+        <li>
+            <h2>Diligence</h2>
+            <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+        </li>
+        <li>
+            <h2>Technologies</h2>
+            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Our Team</h2>
+        <ul>
+            <li>
+            <img src="/images/mark-min.jpg" alt="Mark" width="260" height="264">
+             <h3>Mark Guerrero</h3>
+             <p>Product Designer</p>
+           </li>
+           <li>
+            <img src="/images/tom-min.jpg" alt="Tom" width="260" height="264">
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+           </li>
+           <li>
+            <img src="/images/camila-min.jpg" alt="Camila" width="260" height="264">
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+           </li>
+        <li>
+            <img src="/images/daniel-min.jpg" alt="Daniel" width="260" height="264">
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+        </li>
+        
+        </ul>
+    </section>
+</main>
+<footer>
+    <section>
+        <a href="#">WEBSTUDIO</a>
+        <p>Increase the flow of customers and<br> sales for your business with digital<br> marketing & growth solutions.</p>
+    </section>
+</footer>
 </body>
 </html>
