--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
 <header>
     <section>
-       <ul>
+    <nav>
+     <ul>
         <li><a href="#">WEBSTUDIO</a></li>
-        <nav>
         <li><a href="#">Studio</a></li>
         <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contacts</a></li>
-        </nav>
+        <li><a href="#">Contacts</a></li>  
     </ul>
+    </nav>
     <address>
         <Ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+        <li><a href="tel:+11-000-111-11-11">+11 (000) 111-11-11</a></li>
         </Ul>
     </address>
     </section>
