--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </ul>
     </address>
 </header>
+<main>
     <section>
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
