--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -29,6 +28,7 @@
             <button type="button">Order Service</button>
      </section>
      <section>
+        <h2>www</h2>
         <ul>
         <li>
             <h3>Strategy</h3>
